<resources>
    <string name="app_name">Quizline</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="number">Number</string>
    <string name="custom_message">You have successfully registered.</string>
    <string name="ok">OK</string>
    <string name="name">NAME</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="loginId">Login Id</string>
</resources>
